<resources>
    <string name="app_name">MyUploads</string>
    <string name="givit">GIVIT</string>
    <string name="thanks_you_for_being_a_generous_giver">Thanks you for being a generous giver</string>
    <string name="my_uploads">My Uploads</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="todo">TODO</string>
</resources>